--- a/index.html
+++ b/index.html
@@ -1477,13 +1477,13 @@
     <section>
         <div id="v_nv">
             <div id="veg">
-                <a href="/veg.html">
+                <a href="./veg.html">
                     <img src="hotel/60dfcd8096cd9a40c150f2313075d0f5.jpg" alt="">
                 </a>
                     <h3>veg</h3>
             </div>
             <div id="non_veg">
-                <a href="/non-veg.html">
+                <a href="./non-veg.html">
                     <img src="hotel/a484a4ad140d00070bb9f02c3b61e83c.jpg" alt="">
                 </a>
                     <h3>Non-Veg</h3>
