--- a/non-veg.html
+++ b/non-veg.html
@@ -1178,14 +1178,14 @@
 
     <section id="rot">
         <div class="box">
-            <span style="--i:1;"><img src="/vegitarian/c1.jpg" alt=""></span>
-            <span style="--i:2;"><img src="/vegitarian/c2.jpg" alt=""></span>
-            <span style="--i:3;"><img src="/vegitarian/c3.jpg" alt=""></span>
-            <span style="--i:4;"><img src="/vegitarian/c4.jpg" alt=""></span>
-            <span style="--i:5;"><img src="/vegitarian/c5.jpg" alt=""></span>
-            <span style="--i:6;"><img src="/vegitarian/c6.jpg" alt=""></span>
-            <span style="--i:7;"><img src="/vegitarian/c7.jpg" alt=""></span>
-            <span style="--i:8;"><img src="/vegitarian/c8.jpg" alt=""></span>
+            <span style="--i:1;"><img src="./vegitarian/c1.jpg" alt=""></span>
+            <span style="--i:2;"><img src="./vegitarian/c2.jpg" alt=""></span>
+            <span style="--i:3;"><img src="./vegitarian/c3.jpg" alt=""></span>
+            <span style="--i:4;"><img src="./vegitarian/c4.jpg" alt=""></span>
+            <span style="--i:5;"><img src="./vegitarian/c5.jpg" alt=""></span>
+            <span style="--i:6;"><img src="./vegitarian/c6.jpg" alt=""></span>
+            <span style="--i:7;"><img src="./vegitarian/c7.jpg" alt=""></span>
+            <span style="--i:8;"><img src="./vegitarian/c8.jpg" alt=""></span>
         </div>
     </section>
 
@@ -1193,7 +1193,7 @@
     <section>
         <div id="food_sec1">
             <div id="page_bg">
-                <img src="/vegitarian/offer_bg_04.jpg" alt="">
+                <img src="./vegitarian/offer_bg_04.jpg" alt="">
                 <div id="page_word">
                     <h3>Traditional Firewood Cooking</h3>
                     <div id="page_con1">The best authentic biryani is offered by APS restaurant. When making authentic biryani, we use daily cut meat, regularly produced vegetables, and traditional Basmati rice cooked over traditional coal and firewood.</div>
@@ -1212,37 +1212,37 @@
                 <div class="splide__list">
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide1.jpg" height="500px" width="300px" alt="">
+                            <img src="./vegitarian/splide1.jpg" height="500px" width="300px" alt="">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide2.jpg" height="500px" width="300px" alt="">
+                            <img src="./vegitarian/splide2.jpg" height="500px" width="300px" alt="">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide3.jpg" height="500px" width="300px" alt="">
+                            <img src="./vegitarian/splide3.jpg" height="500px" width="300px" alt="">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide4.jpg" height="500px" width="300px" alt="">
+                            <img src="./vegitarian/splide4.jpg" height="500px" width="300px" alt="">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide5.jpg" height="500px" width="300px" alt="">
+                            <img src="./vegitarian/splide5.jpg" height="500px" width="300px" alt="">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide6.jpg" alt="" height="500px" width="300px">
+                            <img src="./vegitarian/splide6.jpg" alt="" height="500px" width="300px">
                         </div>
                     </div>
                     <div class="splide__slide">
                         <div class="img_box">
-                            <img src="vegitarian/splide7.jpg" alt="" height="500px" width="300px">
+                            <img src="./vegitarian/splide7.jpg" alt="" height="500px" width="300px">
                         </div>
                     </div>
                 </div>
@@ -1273,7 +1273,7 @@
         <div id="card_sec1">
             <div id="card">
                 <div id="img_card1">
-                    <img src="vegitarian/card1.jpg" alt="">
+                    <img src="./vegitarian/card1.jpg" alt="">
                 </div>
                 <div id="card_content1">
                     <h3>Idli & chicken gravy</h3>
@@ -1283,7 +1283,7 @@
             </div>
             <div id="card2">
                 <div id="img_card2">
-                    <img src="vegitarian/card2.jpg" alt="">
+                    <img src="./vegitarian/card2.jpg" alt="">
                 </div>
                 <div id="card_content2">
                     <h3>Appam & Crab gravy</h3>
@@ -1296,7 +1296,7 @@
         <div id="card_sec2">
             <div id="card3">
                 <div id="img_card3">
-                    <img src="vegitarian/card3.jpg" alt="">
+                    <img src="./vegitarian/card3.jpg" alt="">
                 </div>
                 <div id="card_content3">
                     <h3>Non-Veg Combo</h3>
@@ -1306,7 +1306,7 @@
             </div>
             <div id="card4">
                 <div id="img_card4">
-                    <img src="vegitarian/card4.jpg" alt="">
+                    <img src="./vegitarian/card4.jpg" alt="">
                 </div>
                 <div id="card_content4">
                     <h3>Chicken Briyani</h3>
@@ -1319,7 +1319,7 @@
     
     <div style="height: 500px;"></div>
     
-    <video src="/vegitarian/file.mp4" id="vid1" loop muted autoplay></video>
+    <video src="./vegitarian/file.mp4" id="vid1" loop muted autoplay></video>
 
     <div style="height: 100px;" id="space3"></div>
 
@@ -1330,7 +1330,7 @@
                 <p>Experience culinary excellence - reserve your table online now for a seamless dining experience at our restaurant!</p>
             </div>
             <div id="shape_img">
-                <img src="vegitarian/shape_img.jpg" alt="">
+                <img src="./vegitarian/shape_img.jpg" alt="">
             </div>
         </div>
     </section>
@@ -1343,7 +1343,7 @@
         <div id="end">
             <div>
                 <div id="veg">
-                    <a href="/veg.html">
+                    <a href="./veg.html">
                         <img src="/60dfcd8096cd9a40c150f2313075d0f5.jpg" alt="">
                     </a>
                 </div>
@@ -1351,7 +1351,7 @@
             </div>
             <div>
                 <div id="home">
-                    <a href="/hotel.html">
+                    <a href="./index.html">
                         <img src="/biryani-logo.png" alt="">
                     </a>
                 </div>
