--- a/non-veg.html
+++ b/non-veg.html
@@ -1344,7 +1344,7 @@
             <div>
                 <div id="veg">
                     <a href="./veg.html">
-                        <img src="/60dfcd8096cd9a40c150f2313075d0f5.jpg" alt="">
+                        <img src="./hotel/60dfcd8096cd9a40c150f2313075d0f5.jpg" alt="">
                     </a>
                 </div>
                 <h3>Veg</h3>
