--- a/veg.html
+++ b/veg.html
@@ -278,7 +278,7 @@
             font-family: 'Source Sans 3', sans-serif;
             margin: 20px;
             border-radius: 50px;
-            background-image: url('/non-veg/card1.jpg');
+            background-image: url('./non-veg/card1.jpg');
             background-size: cover;
             background-position: center;
             transition: 0.5s;
@@ -286,27 +286,27 @@
             box-shadow: 0px 0px 20px 3px #DC143C;
         }
         .img-box:nth-child(2){
-            background-image: url('/non-veg/card2.jpg');
+            background-image: url('./non-veg/card2.jpg');
             background-size: cover;
             background-position: center;
         }
         .img-box:nth-child(3){
-            background-image: url('/non-veg/card3.jpg');
+            background-image: url('./non-veg/card3.jpg');
             background-size: cover;
             background-position: center;
         }
         .img-box:nth-child(4){
-            background-image: url('/non-veg/card4.jpg');
+            background-image: url('./non-veg/card4.jpg');
             background-size: cover;
             background-position: center;
         }
         .img-box:nth-child(5){
-            background-image: url('/non-veg/card5.jpg');
+            background-image: url('./non-veg/card5.jpg');
             background-size: cover;
             background-position: center;
         }
         .img-box:nth-child(6){
-            background-image: url('/non-veg/card6.jpg');
+            background-image: url('./non-veg/card6.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -1216,7 +1216,7 @@
         <div id="trans_sec">
             <div id="trans">
                 <div class="trans_img">
-                    <img src="/non-veg/tran_img1.jpg" alt="" id="id1">
+                    <img src="./non-veg/tran_img1.jpg" alt="" id="id1">
                 </div>
             </div>
 
@@ -1278,7 +1278,7 @@
     <section>
         <div id="card">
             <div id="grad1"  data-aos="fade-up" data-aos-duration="1000">
-                <img src="/non-veg/grad_img1.jpg" alt="">
+                <img src="./non-veg/grad_img1.jpg" alt="">
                 <div>
                     <h3>Veg Fish Fry</h3>
                     <p>Thick sliced bannana gives the shape of fish fry</p>
@@ -1286,7 +1286,7 @@
                 </div>
             </div>
             <div id="grad2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
-                <img src="/non-veg/grad_img2.jpg" alt="">
+                <img src="./non-veg/grad_img2.jpg" alt="">
                 <div>
                     <h3>Veg Chicken 65</h3>
                     <p>Paneer withvariety of masalas gives the chicken taste</p>
@@ -1294,7 +1294,7 @@
                 </div>
             </div>
             <div id="grad3"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
-                <img src="/non-veg/grad_img3.jpg" alt="">
+                <img src="./non-veg/grad_img3.jpg" alt="">
                 <div>
                     <h3>Veg Omlet</h3>
                     <p>Gram Flour with flovoured spices gives omlet taste</p>
@@ -1314,18 +1314,18 @@
             <div id="rot">
                 <div id="flex1">
                     <div id="img_sec1">
-                        <img src="/non-veg/sec_img1.jpg" alt="">
+                        <img src="./non-veg/sec_img1.jpg" alt="">
                     </div>
                     <div id="img_sec2">
-                        <img src="/non-veg/sec_img2.jpg" alt="">
+                        <img src="./non-veg/sec_img2.jpg" alt="">
                     </div>
                 </div>
                 <div id="flex2">
                     <div id="img_sec3">
-                        <img src="/non-veg/sec_img3.jpg" alt="">
+                        <img src="./non-veg/sec_img3.jpg" alt="">
                     </div>
                     <div id="img_sec4">
-                        <img src="/non-veg/sec_img4.jpg" alt="">
+                        <img src="./non-veg/sec_img4.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -1335,7 +1335,7 @@
 
     <section>
         <div id="full_img">
-            <img src="/non-veg/full_img2.jpg" alt="">
+            <img src="./non-veg/full_img2.jpg" alt="">
             <h3>Vegitable Salad</h3>
             <p>A veg salad bursts with freshness, offering a colorful array of crisp vegetables tossed in a tangy dressing.</p>
         </div>
@@ -1349,7 +1349,7 @@
                 <p>Experience culinary excellence - reserve your table online now for a seamless dining experience at our restaurant!</p>
             </div>
             <div id="shape_img">
-                <img src="vegitarian/shape_img.jpg" alt="">
+                <img src="./vegitarian/shape_img.jpg" alt="">
             </div>
         </div>
     </section>
@@ -1359,7 +1359,7 @@
         <div id="end">
             <div>
                 <div id="veg">
-                    <a href="/non-veg.html">
+                    <a href="./non-veg.html">
                         <img src="/card3.jpg" alt="">
                     </a>
                 </div>
@@ -1367,8 +1367,8 @@
             </div>
             <div>
                 <div id="home">
-                    <a href="/hotel.html">
-                        <img src="/biryani-logo.png" alt="">
+                    <a href="./index.html">
+                        <img src="./hotel/biryani-logo.png" alt="">
                     </a>
                 </div>
                 <h2>HOME</h2>
@@ -1460,7 +1460,7 @@
 
         }
 
-        z=["/non-veg/tran_img1.jpg","/non-veg/tran_img2.jpg","/non-veg/tran_img3.jpg","/non-veg/tran_img4.jpg","/non-veg/tran_img5.jpg","/non-veg/tran_img6.jpg","/non-veg/tran_img7.jpg","/non-veg/tran_img8.jpg"]
+        z=["./non-veg/tran_img1.jpg","./non-veg/tran_img2.jpg","./non-veg/tran_img3.jpg","./non-veg/tran_img4.jpg","./non-veg/tran_img5.jpg","./non-veg/tran_img6.jpg","./non-veg/tran_img7.jpg","./non-veg/tran_img8.jpg"]
         n=0;
         document.getElementById('id1').src=z[n]
         function ab(){
