--- a/non-veg.html
+++ b/non-veg.html
@@ -1352,7 +1352,7 @@
             <div>
                 <div id="home">
                     <a href="./index.html">
-                        <img src="/biryani-logo.png" alt="">
+                        <img src="./hotel/biryani-logo.png" alt="">
                     </a>
                 </div>
                 <h2>HOME</h2>
