--- a/veg.html
+++ b/veg.html
@@ -1360,7 +1360,7 @@
             <div>
                 <div id="veg">
                     <a href="./non-veg.html">
-                        <img src="/card3.jpg" alt="">
+                        <img src="./vegitarian/c1.jpg" alt="">
                     </a>
                 </div>
                 <h3>Non-Veg</h3>
