--- a/veg.html
+++ b/veg.html
@@ -1268,7 +1268,7 @@
                 <!-- <div class="img-box"> <div></div><h3>Paneer</h3></div> -->
                 <!-- <div class="img-box"><h3>Gopi Fry</h3></div> -->
             </div>
-            <video src="/da0b58d1ca419e2891a82475c4003f39 (online-video-cutter.com).mp4" autoplay muted loop></video>
+            <video src="./hotel/da0b58d1ca419e2891a82475c4003f39 (online-video-cutter.com).mp4" autoplay muted loop></video>
         </div>
         
     </section>
