chenges in line

--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
 
     <div style="height: 400px;"></div>
 
-    <div style="width: 100%; color: rgb(255, 213, 0); border: 1px solid;" id="line"></div>
+    <!-- <div style="width: 100%; color: rgb(255, 213, 0); border: 1px solid;" id="line"></div> -->
 
     <div style="height: 100px;"></div>
 
@@ -1471,7 +1471,7 @@
 
 
     <div style="height: 100px;" id="sp1"></div>
-    <div style="width: 100%; color: rgb(255, 213, 0); border: 1px solid;" id="line2"></div>
+    <!-- <div style="width: 100%; color: rgb(255, 213, 0); border: 1px solid;" id="line2"></div> -->
     <div style="height: 100px;"></div>
     
 
