Changes in line

--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
 
     <div style="height: 150px;"></div>
 
-    <section>
+    <!-- <section>
         <div id="food">
             <div>
                 <h3 id="f_dis">Discover</h3>
@@ -1467,7 +1467,7 @@
                     <img src="hotel/d0c8b00fc8451f87f9a667ee0d74d0cc.jpg">
                 </div>
         </div>
-    </section>
+    </section> -->
 
 
     <div style="height: 100px;" id="sp1"></div>
